# opencv-mtcnn

./: README.md
lib/: CMakeLists.txt
lib/src/: detector.cc
sample/: CMakeLists.txt
sample/include/: de_mypicardo_facer_face_detection_business_OpenCvMtcnn.h  de_mypicardo_facer_face_detection_mtcnn_business_OpenCvMtcnnFaceDetector.h
sample/src/: OpenCvMtcnn.cc
